--- a/application.cfg
+++ b/application.cfg
@@ -1,4 +1,4 @@
-//-mstUseSecure=true
-//-mstCertificatePath=C:\UnityProjects\MST\Certificates\MasterServer.pfx
-//-mstCertificatePassword=qazwsxedc
--mstWebPort=5059
+-mstUseSecure=false
+-mstMasterPort=5058
+-mstMasterIp=localhost
+-mstStartClientConnection=true
