--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/MasterServerToolkit/Addons.meta
+wwwroot/
