--- a/Assets/MasterServerToolkit/MasterServerToolkit.asmdef
+++ b/Assets/MasterServerToolkit/MasterServerToolkit.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "Unity.TextMeshPro",
-        "Mirror"
+        "Mirror",
+        "SimpleWebTransport"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
