--- a/Assets/MasterServerToolkit/MasterServerToolkit.asmdef
+++ b/Assets/MasterServerToolkit/MasterServerToolkit.asmdef
@@ -3,8 +3,8 @@
     "rootNamespace": "",
     "references": [
         "Unity.TextMeshPro",
-        "Mirror",
-        "SimpleWebTransport"
+        "SimpleWebTransport",
+        "Mirror"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
