-Additional properties for HttpServerModule -Fixes for latest mirror -Fixes for latest fishnet

--- a/Assets/MasterServerToolkit/MasterServerToolkit.asmdef
+++ b/Assets/MasterServerToolkit/MasterServerToolkit.asmdef
@@ -7,7 +7,8 @@
         "Mirror",
         "FishNet.Runtime",
         "FishNet.Generated",
-        "FishNet.Example"
+        "FishNet.Example",
+        "Mirror.Transports"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
